PAY-2115: Unit Test cases committed.