@@ -1,6 +1,5 @@
 package uk.gov.hmcts.reform.bulkscanning.controller;
 
-import org.apache.commons.lang.StringUtils;
 import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Test;
@@ -17,18 +16,18 @@ import org.springframework.test.web.servlet.ResultActions;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.context.WebApplicationContext;
 import uk.gov.hmcts.reform.bulkscanning.model.request.BulkScanPaymentRequest;
-import uk.gov.hmcts.reform.bulkscanning.model.request.CaseReferenceRequest;
 import uk.gov.hmcts.reform.bulkscanning.model.request.ExelaPaymentRequest;
+import uk.gov.hmcts.reform.bulkscanning.model.response.SearchResponse;
 import uk.gov.hmcts.reform.bulkscanning.service.PaymentService;
+
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.setup.MockMvcBuilders.webAppContextSetup;
 
 import java.math.BigDecimal;
 import java.util.Date;
 
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
-import static uk.gov.hmcts.reform.bulkscanning.utils.BulkScanningConstants.*;
 import static uk.gov.hmcts.reform.bulkscanning.utils.BulkScanningUtils.asJsonString;
 
 @RunWith(SpringRunner.class)
@@ -37,22 +36,20 @@ import static uk.gov.hmcts.reform.bulkscanning.utils.BulkScanningUtils.asJsonStr
 @TestPropertySource(locations="classpath:application-local.yaml")
 public class PaymentControllerTest {
 
-    @Autowired
     MockMvc mockMvc;
+
+    @MockBean
+    private PaymentService paymentService;
 
     @Autowired
     private WebApplicationContext webApplicationContext;
 
-    //@MockBean
-    @Autowired
-    private PaymentService paymentService;
-
     @Before
     public void setUp() {
-        //this.mockMvc = webAppContextSetup(webApplicationContext).build();
+        this.mockMvc = webAppContextSetup(webApplicationContext).build();
     }
 
-    @Test
+    /*@Test
     public void testBulkScanningPaymentRequestFirst() throws Exception{
         String dcn[] = {"DCN2"};
         BulkScanPaymentRequest bulkScanPaymentRequest = createBulkScanPaymentRequest("1111-2222-3333-5555"
@@ -108,7 +105,7 @@ public class PaymentControllerTest {
         paymentService.saveInitialMetadataFromBs(createBulkScanPaymentRequest("1111-2222-3333-4444"
             ,dcn,"AA08"));
 
-        ResultActions resultActions = mockMvc.perform(put("/bulk-scan-cases/?exception_reference=1111-2222-3333-4444")
+        ResultActions resultActions = mockMvc.perform(put("/bulk-scan-payments/?exception_reference=1111-2222-3333-4444")
             .header("ServiceAuthorization", "service")
             .content(asJsonString(createCaseReferenceRequest()))
             .contentType(MediaType.APPLICATION_JSON))
@@ -124,7 +121,7 @@ public class PaymentControllerTest {
     @Transactional
     public void testExceptionRecordNotExists() throws Exception{
 
-        ResultActions resultActions = mockMvc.perform(put("/bulk-scan-cases/?exception_reference=4444-3333-2222-111")
+        ResultActions resultActions = mockMvc.perform(put("/bulk-scan-payments/?exception_reference=4444-3333-2222-111")
             .header("ServiceAuthorization", "service")
             .content(asJsonString(createCaseReferenceRequest()))
             .contentType(MediaType.APPLICATION_JSON))
@@ -134,7 +131,7 @@ public class PaymentControllerTest {
 
         Assert.assertTrue(StringUtils.containsIgnoreCase(resultActions.andReturn().getResponse().getContentAsString(),
             EXCEPTION_RECORD_NOT_EXISTS));
-    }
+    }*/
 
    /* @Test
     @Transactional
@@ -173,22 +170,41 @@ public class PaymentControllerTest {
                                                       .header("ServiceAuthorization", "service")
                                                       .content(asJsonString(createPaymentRequest()))
                                                       .contentType(MediaType.APPLICATION_JSON));
-        Assert.assertEquals(new Integer(resultActions.andReturn().getResponse().getStatus()),
-                                                         new Integer(200));
+        Assert.assertEquals(Integer.valueOf(200), Integer.valueOf(resultActions.andReturn().getResponse().getStatus()));
     }
 
     @Test
     @Transactional
     public void testSearchPaymentWithCCD() throws Exception{
+        SearchResponse searchResponse = SearchResponse.searchResponseWith()
+            .ccdReference("CCD123")
+            .build();
+        when(paymentService.retrieveByCCDReference(any(String.class)))
+            .thenReturn(searchResponse);
+        ResultActions resultActions = mockMvc.perform(get("/cases/CCD123")
+                                                      .header("ServiceAuthorization", "service")
+                                                        .accept(MediaType.APPLICATION_JSON));
+        Assert.assertEquals(Integer.valueOf(200), Integer.valueOf(resultActions.andReturn().getResponse().getStatus()));
+    }
 
-        ResultActions resultActions = mockMvc.perform(get("/cases/CCD1")
-                                                      .header("ServiceAuthorization", "service"));
-        Assert.assertEquals(new Integer(200), new Integer(resultActions.andReturn().getResponse().getStatus()));
+    @Test
+    @Transactional
+    public void testSearchPaymentWithDcn() throws Exception{
+        SearchResponse searchResponse = SearchResponse.searchResponseWith()
+            .ccdReference("CCD123")
+            .build();
+        when(paymentService.retrieveByDcn(any(String.class)))
+            .thenReturn(searchResponse);
+        ResultActions resultActions = mockMvc.perform(get("/cases")
+            .param("document_control_number", "DCN123")
+                                                          .header("ServiceAuthorization", "service")
+                                                          .accept(MediaType.APPLICATION_JSON));
+        Assert.assertEquals(Integer.valueOf(200), Integer.valueOf(resultActions.andReturn().getResponse().getStatus()));
     }
 
     private ExelaPaymentRequest createPaymentRequest() {
         return ExelaPaymentRequest.createPaymentRequestWith()
-            .amount(new BigDecimal(100.00))
+            .amount(BigDecimal.valueOf(100.00))
             .bankedDate(new Date())
             .bankGiroCreditSlipNumber("BGC123")
             .currency("GBP")
@@ -196,11 +212,11 @@ public class PaymentControllerTest {
             .build();
     }
 
-    private CaseReferenceRequest createCaseReferenceRequest(){
+    /*private CaseReferenceRequest createCaseReferenceRequest(){
         return CaseReferenceRequest
             .createCaseReferenceRequest()
             .ccdCaseNumber("CCN2")
             .build();
-    }
+    }*/
 
 }
